# OpenCL-Wrapper

./: CMakeLists.txt  LICENSE  README.md  package.xml
include/: .cl_wrapper.hpp.swp  cl_wrapper.hpp
include/cl_wrapper/: cl_wrapper.hpp
src/: .cl_wrapper.cpp.swp  cl_wrapper.cpp
test/: .test.cpp.swp  CMakeLists.txt  test.cpp
test/kernels/: kernel.cl
